//
//  UITestKey.swift
//  Spotify
//
//  Created by Romain Mullot on 26/01/2019.
//  Copyright © 2019 Romain Mullot. All rights reserved.
//

import Foundation

enum UITestingIdentifiers: String {
  case searchViewController
  case searchBarSpotify
  case descriptionViewController
}
